End of chapter 1

--- a/MoneyExampleTests/MoneyExampleTests.csproj
+++ b/MoneyExampleTests/MoneyExampleTests.csproj
@@ -46,10 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MoneyExampleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MoneyExample\MoneyExample.csproj">
+      <Project>{5B66EBBC-E819-4B2E-9BEF-FD04D07039CC}</Project>
+      <Name>MoneyExample</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
